--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
     <string name="about">
         <![CDATA[
-        <big><b>%1$s</b></big>
+        <big><big>&#128302;</big></big>
+        <br><big><b>%1$s</b></big>
         <br><b>Version: %2$s (%3$d)</b>
         <br><br>2014-%4$d Memoeslink Futura
-        <br><small>Guillermo Almaguer (memoeslink)</small>
+        <br><small>Guillermo Almaguer (Memoeslink)</small>
         <br><small>memocad@gmail.com</small>
         <br><br>Application to predict the future
         <br><br><font color="#53E3B3">Images:</font>
@@ -44,6 +45,26 @@
         <br><i><font color="#FDFCDA">• Nee Si Yao, Phu Tang, Umair Vatao: </font><font color=#FFFDC4>EasyAndroidAnimations</font></i> [<font color=#D0F0B7>Apache License v2.0</font>] (<a href="https://github.com/2359media/EasyAndroidAnimations/">https://github.com/</a>)
         <br><i><font color="#FDFCDA">• Wouter Dullaert: </font><font color=#FFFDC4>Material DateTime Picker</font></i> [<font color=#D0F0B7>Apache License v2.0</font>] (<a href="https://github.com/wdullaer/MaterialDateTimePicker/">https://github.com/</a>)
         <br><i><font color="#FDFCDA">• Zhang Hai: </font><font color=#FFFDC4>MaterialProgressBar</font></i> [<font color=#D0F0B7>Apache License v2.0</font>] (<a href="https://github.com/DreaminginCodeZH/MaterialProgressBar/">https://github.com/</a>)
+        <br><br><br>&#128195;<br><font color="#7ED6D2">Privacy Policy:</font>
+        <br><br><font color="#8888FC">1. Introduction</font>
+        <br>Welcome to "%1$s", an application developed by Guillermo Almaguer, also known as Memoeslink. This privacy policy aims to inform you about how we collect, use, safeguard, and disclose information we gather from users of our application.
+        <br><br><font color="#8888FC">2. Information Collected</font>
+        <br>"%1$s" does not automatically collect or store personally identifiable information such as your name, birthdate or other details that may be relevant to customize the predictions. Only the data that the user decides to voluntarily provide through interaction with the application will be collected and used.
+        <br><br><font color="#8888FC">3. Use of Information</font>
+        <br>Any personal information provided by the user is only used for the purpose of personalizing the future predictions provided by our application. This information is not stored in a remote database and is not used for commercial purposes.
+        <br><br>The information provided by the user is not used to make decisions that may adversely affect you.
+        <br><br><font color="#8888FC">4. Information Security</font>
+        <br>Since the personal information we collect is not stored in a remote database, the risk of security breaches is significantly lower. However, we strive to use acceptable practices to protect your information.
+        <br><br><font color="#8888FC">5. Control Over Your Information</font>
+        <br>The user has full control over the information provided to the "%1$s" application. You may choose not to provide certain information, but that may limit the application\'s ability to personalize future predictions.
+        <br><br>The information provided to "%1$s" can be manually deleted by the user at any time. Also, when the application is uninstalled, all data provided by the user is removed from the application.
+        <br><br><font color="#8888FC">6. Changes to This Privacy Policy</font>
+        <br>"%1$s" reserves the right to modify this privacy policy at any time. We recommend that you review this privacy policy periodically to be aware of any changes.
+        <br><br><font color="#8888FC">7. Contact</font>
+        <br>If you have any questions about this Privacy Policy, you can contact us:
+        <br><br>Guillermo Almaguer (Memoeslink)
+        <br>Email: <a href="mailto:memocad@gmail.com">memocad@gmail.com</a>
+        <br><br>By using "%1$s", you agree to this Privacy Policy. If you do not agree with this policy, please do not use our application. Your continued use of the application following the posting of changes to this policy will be deemed as your acceptance of such changes.
         ]]>
     </string>
     <string name="adjectives">boring¶ affectionate¶ agile¶ pleasant¶ cheerful¶ kind¶ resentful¶ ambitious¶ friendly¶ angelic¶ fervent¶ listless¶ ardent¶ attentive¶ groggy¶ saucy¶ adventurous¶ sharp¶ crass¶ quarrelsome¶ bright¶ sneering¶ cantankerous¶ cautious¶ jealous¶ cynical¶ cowardly¶ coherent¶ sympathetic¶ conscientious¶ conservative¶ considerate¶ distraught¶ conventional¶ talkative¶ flirtatious¶ hearty¶ blunt¶ polite¶ big-headed¶ cruel¶ careful¶ curious¶ open-minded¶ laid-back¶ easy-going¶ moody¶ bad-tempered¶ short-tempered¶ narrow-minded¶ weak¶ dependent¶ dreary¶ depressed¶ dowdy¶ distrustful¶ inconsiderate¶ careless¶ idle¶ carefree¶ trustworthy¶ diligent¶ tactful¶ direct¶ discreet¶ argumentative¶ distant¶ absent-minded¶ funny¶ hesitant¶ sweet¶ polite¶ efficient¶ selfish¶ elegant¶ two-faced¶ emotional¶ enterprising¶ charming¶ energetic¶ peevish¶ conceited¶ nosy¶ eager¶ balanced¶ boisterous¶ fastidious¶ stoic¶ strict¶ stupid¶ flaky¶ picky¶ experienced¶ weird¶ outgoing¶ zealous¶ reliable¶ loyal¶ flabby¶ staid¶ cold¶ generous¶ gentle¶ amusing¶ grouchy¶ deft¶ beautiful¶ hysterical¶ slothful¶ honest¶ awful¶ reclusive¶ imaginative¶ moronic¶ impatient¶ impetuous¶ impulsive¶ independent¶ childish¶ naive¶ immature¶ restless¶ tactless¶ intelligent¶ interesting¶ intolerant¶ plucky¶ playful¶ shrewd¶ querulous¶ crazy¶ mature¶ churlish¶ sulky¶ spiteful¶ nasty¶ maternal¶ gloomy¶ meticulous¶ modest¶ caustic¶ nervous¶ obnoxious¶ proud¶ patient¶ peaceful¶ passionate¶ pensive¶ lazy¶ persevering¶ disruptive¶ annoying¶ sassy¶ powerful¶ positive¶ practical¶ conceited¶ snobby¶ provocative¶ cautious¶ punctual¶ fussy¶ reluctant¶ realistic¶ leery¶ reserved¶ responsible¶ ridiculous¶ discerning¶ confident¶ self-confident¶ sensible¶ sensitive¶ serene¶ serious¶ obliging¶ stern¶ friendly¶ sincere¶ sophisticated¶ drowsy¶ dull¶ dirty¶ superficial¶ mean¶ sullen¶ talented¶ stubborn¶ shy¶ silly¶ clumsy¶ hard-working¶ reassuring¶ quiet¶ naughty¶ sad¶ helpful¶ brave¶ bitchy¶ lively</string>
