Fixed some typos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
         <br><br><font color="#8888FC">6. Changes to This Privacy Policy</font>
         <br>"%1$s" reserves the right to modify this privacy policy at any time. We recommend that you review this privacy policy periodically to be aware of any changes.
         <br><br><font color="#8888FC">7. Contact</font>
-        <br>If you have any questions about this privacy Policy, you can contact us:
+        <br>If you have any questions about this privacy policy, you can contact us:
         <br><br>Guillermo Almaguer (Memoeslink)
         <br>Email: <a href="mailto:memocad@gmail.com">memocad@gmail.com</a>
         <br><br>By using "%1$s", you agree to this privacy policy. If you do not agree with this policy, please do not use our application. Your continued use of the application following the posting of changes to this policy will be deemed as your acceptance of such changes.
