Updated the "About" section.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -11,11 +11,12 @@
         <br><small>Guillermo Almaguer (Memoeslink)</small>
         <br><small>memocad@gmail.com</small>
         <br><br>Aplicación de predicción del futuro
-        <br><br><font color="#53E3B3">Imágenes:</font>
+        <br><br><br>&#x1F4D6;<br><font color="#7ED6D2">Recursos:</font>
+        <br><br><font color="#53E3B3">Imágenes</font>
         <br><i><font color="#FFFDC4">• Dimitry Miroliubov</font></i> [<font color=#99BAD1>Licencia básica de Flaticon</font>] (<cite>http://www.flaticon.com/</cite>)
         <br><i><font color="#FFFDC4">• Freepik</font></i> [<font color=#99BAD1>Licencia básica de Flaticon</font>] (<cite>http://www.flaticon.com/</cite>)
         <br><i><font color="#FFFDC4">• Vectors Market</font></i> [<font color=#99BAD1>Licencia básica de Flaticon</font>] (<cite>http://www.flaticon.com/</cite>)
-        <br><br><font color="#53E3B3">Sonidos:</font>
+        <br><br><font color="#53E3B3">Sonidos</font>
         <br><i><font color="#FFFDC4">• andersmmg</font></i> [<font color=#B9B0F4>CC BY 4.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• cabled_mess</font></i> [<font color=#6ACCB1>CC0 1.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• Intimidated</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<cite>http://freesound.org/</cite>)
@@ -28,14 +29,14 @@
         <br><i><font color="#FFFDC4">• shinephoenixstormcrow</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• TheAtomicBrain</font></i> [<font color=#6ACCB1>CC0 1.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• TheGertz</font></i> [<font color=#6ACCB1>CC0 1.0</font>] (<cite>http://freesound.org/</cite>)
-        <br><br><font color="#53E3B3">Recursos lingüísticos:</font>
-        <br><i><font color="#8082E5">• Desi Quintans</font></i> [<font color=#A268FF>Dominio público</font>] (<a href="http://www.desiquintans.com/nounlist/">http://www.desiquintans.com/</a>)
-        <br><i><font color="#8082E5">• Ian Li</font></i> [<font color=#FF9BB4>Licencia MIT</font>] (<a href="https://github.com/ianli/fortune-cookies-galore/">https://github.com/</a>)
-        <br><i><font color="#8082E5">• Ismael Olea</font></i> [<font color=#A268FF>Dominio público</font>] (<a href="http://olea.org/proyectos/lemarios/">http://olea.org/</a>)
-        <br><i><font color="#8082E5">• Solosequenosenada</font></i> [<font color=#A268FF>Dominio público</font>] (<a href="http://www.solosequenosenada.com/gramatica/spanish/listado/lista_01_adjetivos.php/">http://www.solosequenosenada.com/</a>)
-        <br><i><font color="#8082E5">• Wikipedia, la enciclopedia libre</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<a href="https://www.wikipedia.org/">https://www.wikipedia.org/</a>)
-        <br><i><font color="#BABBFF">• Frequency lists by Neri</font></i> [<font color=#A268FF>Dominio público</font>] (<a href="http://frequencylists.blogspot.mx/2016/08/5000-spanish-sentences-sorted-from.html/">https://blogger.com/</a>)
-        <br><br><font color="#53E3B3">Código:</font>
+        <br><br><font color="#53E3B3">Recursos lingüísticos</font>
+        <br><i><font color="#8082E5">• Desi Quintans</font></i> [<font color=#A268FF>Dominio público</font>] (<a href="http://www.desiquintans.com/nounlist">http://www.desiquintans.com</a>)
+        <br><i><font color="#8082E5">• Ian Li</font></i> [<font color=#FF9BB4>Licencia MIT</font>] (<a href="https://github.com/ianli/fortune-cookies-galore">https://github.com</a>)
+        <br><i><font color="#8082E5">• Ismael Olea</font></i> [<font color=#A268FF>Dominio público</font>] (<a href="https://olea.org/proyectos/lemarios/">http://olea.org</a>)
+        <br><i><font color="#8082E5">• Neri</font></i> [<font color=#A268FF>Dominio público</font>] (<a href="https://frequencylists.blogspot.com/2016/08/5000-spanish-sentences-sorted-from.html">https://blogger.com</a>)
+        <br><i><font color="#8082E5">• Solosequenosenada</font></i> [<font color=#A268FF>Dominio público</font>] (<a href="https://www.solosequenosenada.com/gramatica/spanish/listado/lista_01_adjetivos.php">http://www.solosequenosenada.com</a>)
+        <br><i><font color="#8082E5">• Wikipedia, la enciclopedia libre</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<a href="https://www.wikipedia.org">https://www.wikipedia.org</a>)
+        <br><br><font color="#53E3B3">Código</font>
         <br><i><font color="#FDFCDA">• Alexandros Schillings, Cyril Mottier, Jeff Gilfelt, Jon Adams, Kevin (kevinchai): </font><font color=#FFFDC4>Android SQLiteAssetHelper</font></i> [<font color=#D0F0B7>Licencia Apache v2.0</font>] (<a href="https://github.com/jgilfelt/android-sqlite-asset-helper/">https://github.com/</a>)
         <br><i><font color="#FDFCDA">• Amar Jain: </font><font color=#FFFDC4>StickyScrollView</font></i> [<font color=#FF9BB4>Licencia MIT</font>] (<a href="https://github.com/amarjain07/StickyScrollView/">https://github.com/</a>)
         <br><i><font color="#FDFCDA">• Encryptor Code: </font><font color=#FFFDC4>Pluralize</font></i> [<font color=#FF9BB4>Licencia MIT</font>] (<a href="https://github.com/encryptorcode/pluralize/">https://github.com/</a>)
@@ -65,6 +66,7 @@
         <br><br>Guillermo Almaguer (Memoeslink)
         <br>Correo electrónico: <a href="mailto:memocad@gmail.com">memocad@gmail.com</a>
         <br><br>Al usar "%1$s", usted acepta esta política de privacidad. Si no está de acuerdo con esta política, por favor no utilice nuestra aplicación. Su uso continuado de la aplicación tras la publicación de cambios a esta política se considerará como su aceptación de dichos cambios.
+        <br><br>Para más información al respecto, por favor revise la <a href="https://drive.google.com/file/d/1NFvPJOEIhUV-v8Tr9nuDC_seqhYz1b46/view?usp=sharing">Política de Privacidad</a> completa.
         ]]>
     </string>
     <string name="adjectives">[aburrid[o,a]]¶ [afectuos[o,a]]¶ ágil¶ agradable¶ alegre¶ amable¶ [amargad[o,a]]¶ [ambicios[o,a]]¶ amigable¶ angelical¶ [apasionad[o,a]]¶ [apátic[o,a]]¶ ardiente¶ [atent[o,a]]¶ [atontad[o,a]]¶ [atrevid[o,a]]¶ [aventurer[o,a]]¶ [avispad[o,a]]¶ [bast[o,a]]¶ beligerante¶ brillante¶ [burl[ón,ona]]¶ cascarrabias¶ [caut[o,a]]¶ [celos[o,a]]¶ [cínic[o,a]]¶ cobarde¶ coherente¶ [comprensiv[o,a]]¶ [concienzud[o,a]]¶ [conservador[,a]]¶ [considerad[o,a]]¶ [consternad[o,a]]¶ convencional¶ [conversador[,a]]¶ [coquet[o,a]]¶ cordial¶ cortante¶ cortés¶ [creíd[o,a]]¶ cruel¶ [cuidados[o,a]]¶ [curios[o,a]]¶ de actitud abierta¶ de actitud relajada¶ de buen trato¶ de humor cambiante¶ de mal carácter¶ de mal genio¶ de mentalidad cerrada¶ débil¶ dependiente¶ deprimente¶ [deprimid[o,a]]¶ [desaliñad[o,a]]¶ [desconfiad[o,a]]¶ [desconsiderad[o,a]]¶ [descuidad[o,a]]¶ [desocupad[o,a]]¶ [despreocupad[o,a]]¶ [dign[o,a]] de confianza¶ diligente¶ [diplomátic[o,a]]¶ [direct[o,a]]¶ [discret[o,a]]¶ [discutidor[,a]]¶ distante¶ [distraíd[o,a]]¶ [divertid[o,a]]¶ [dubitativ[o,a]]¶ dulce¶ [educad[o,a]]¶ eficiente¶ egoísta¶ elegante¶ [embuster[o,a]]¶ [emotiv[o,a]]¶ [emprendedor[,a]]¶ [encantador[,a]]¶ [energétic[o,a]]¶ [enfadad[o,a]]¶ [engreíd[o,a]]¶ [entrometid[o,a]]¶ [entusiasmad[o,a]]¶ [equilibrad[o,a]]¶ [escandalos[o,a]]¶ [escrupulos[o,a]]¶ [estoic[o,a]]¶ [estrict[o,a]]¶ [estúpid[o,a]]¶ [excéntric[o,a]]¶ exigente¶ [experimentad[o,a]]¶ [extrañ[o,a]]¶ [extravertid[o,a]]¶ [fervoros[o,a]]¶ fiable¶ fiel¶ [fof[o,a]]¶ formal¶ [frí[o,a]]¶ [generos[o,a]]¶ gentil¶ [gracios[o,a]]¶ [gruñ[ón,ona]]¶ hábil¶ [hermos[o,a]]¶ [histéric[o,a]]¶ [holgaz[án,ana]]¶ [honest[o,a]]¶ horrible¶ [hurañ[o,a]]¶ [imaginativ[o,a]]¶ imbécil¶ impaciente¶ [impetuos[o,a]]¶ [impulsiv[o,a]]¶ independiente¶ infantil¶ [ingenu[o,a]]¶ [inmadur[o,a]]¶ [inquiet[o,a]]¶ insensible¶ inteligente¶ interesante¶ intolerante¶ [intrépid[o,a]]¶ [juguet[ón,ona]]¶ [list[o,a]]¶ [llor[ón,ona]]¶ [loc[o,a]]¶ [madur[o,a]]¶ [maleducad[o,a]]¶ [malhumorad[o,a]]¶ [malicios[o,a]]¶ [mal[o,a]]¶ maternal¶ [melancólic[o,a]]¶ [meticulos[o,a]]¶ [modest[o,a]]¶ mordaz¶ [nervios[o,a]]¶ [odios[o,a]]¶ [orgullos[o,a]]¶ paciente¶ [pacífic[o,a]]¶ pasional¶ [pensativ[o,a]]¶ [perezos[o,a]]¶ perseverante¶ [perturbador[,a]]¶ [pesad[o,a]]¶ [pícar[o,a]]¶ [poderos[o,a]]¶ [positiv[o,a]]¶ [práctic[o,a]]¶ [presumid[o,a]]¶ [pretencios[o,a]]¶ [provocador[,a]]¶ prudente¶ puntual¶ [quisquillos[o,a]]¶ [reaci[o,a]]¶ realista¶ [recelos[o,a]]¶ [reservad[o,a]]¶ responsable¶ [ridícul[o,a]]¶ sagaz¶ [segur[o,a]]¶ [segur[o,a]] de sí [mism[o,a]]¶ [sensat[o,a]]¶ sensible¶ [seren[o,a]]¶ [seri[o,a]]¶ servicial¶ [sever[o,a]]¶ [simpátic[o,a]]¶ [sincer[o,a]]¶ [sofisticad[o,a]]¶ [somnolient[o,a]]¶ [sos[o,a]]¶ [suci[o,a]]¶ superficial¶ [tacañ[o,a]]¶ [taciturn[o,a]]¶ [talentos[o,a]]¶ [terc[o,a]]¶ [tímid[o,a]]¶ [tont[o,a]]¶ torpe¶ [trabajador[,a]]¶ [tranquilizador[,a]]¶ [tranquil[o,a]]¶ [travies[o,a]]¶ triste¶ útil¶ valiente¶ [venenos[o,a]]¶ vivaz</string>
