--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,12 @@
         <br><small>Guillermo Almaguer (Memoeslink)</small>
         <br><small>memocad@gmail.com</small>
         <br><br>Application to predict the future
-        <br><br><font color="#53E3B3">Images:</font>
+        <br><br><br>&#x1F4D6;<br><font color="#7ED6D2">Resources:</font>
+        <br><br><font color="#53E3B3">Images</font>
         <br><i><font color="#FFFDC4">• Dimitry Miroliubov</font></i> [<font color=#99BAD1>Flaticon Basic License</font>] (<cite>http://www.flaticon.com/</cite>)
         <br><i><font color="#FFFDC4">• Freepik</font></i> [<font color=#99BAD1>Flaticon Basic License</font>] (<cite>http://www.flaticon.com/</cite>)
         <br><i><font color="#FFFDC4">• Vectors Market</font></i> [<font color=#99BAD1>Flaticon Basic License</font>] (<cite>http://www.flaticon.com/</cite>)
-        <br><br><font color="#53E3B3">Sounds:</font>
+        <br><br><font color="#53E3B3">Sounds</font>
         <br><i><font color="#FFFDC4">• andersmmg</font></i> [<font color=#B9B0F4>CC BY 4.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• cabled_mess</font></i> [<font color=#6ACCB1>CC0 1.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• Intimidated</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<cite>http://freesound.org/</cite>)
@@ -28,14 +29,14 @@
         <br><i><font color="#FFFDC4">• shinephoenixstormcrow</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• TheAtomicBrain</font></i> [<font color=#6ACCB1>CC0 1.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• TheGertz</font></i> [<font color=#6ACCB1>CC0 1.0</font>] (<cite>http://freesound.org/</cite>)
-        <br><br><font color="#53E3B3">Language resources:</font>
-        <br><i><font color="#8082E5">• Desi Quintans</font></i> [<font color=#A268FF>Public domain</font>] (<a href="http://www.desiquintans.com/nounlist/">http://www.desiquintans.com/</a>)
-        <br><i><font color="#8082E5">• Ian Li</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="https://github.com/ianli/fortune-cookies-galore/">https://github.com/</a>)
-        <br><i><font color="#8082E5">• Ismael Olea</font></i> [<font color=#A268FF>Public domain</font>] (<a href="http://olea.org/proyectos/lemarios/">http://olea.org/</a>)
-        <br><i><font color="#8082E5">• Solosequenosenada</font></i> [<font color=#A268FF>Public domain</font>] (<a href="http://www.solosequenosenada.com/gramatica/spanish/listado/lista_01_adjetivos.php/">http://www.solosequenosenada.com/</a>)
-        <br><i><font color="#8082E5">• Wikipedia, the free encyclopedia/font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<a href="https://www.wikipedia.org/">https://www.wikipedia.org/</a>)
-        <br><i><font color="#BABBFF">• Frequency lists by Neri</font></i> [<font color=#A268FF>Public domain</font>] (<a href="http://frequencylists.blogspot.mx/2016/08/5000-spanish-sentences-sorted-from.html/">https://blogger.com/</a>)
-        <br><br><font color="#53E3B3">Code:</font>
+        <br><br><font color="#53E3B3">Language resources</font>
+        <br><i><font color="#8082E5">• Desi Quintans</font></i> [<font color=#A268FF>Public domain</font>] (<a href="http://www.desiquintans.com/nounlist">http://www.desiquintans.com</a>)
+        <br><i><font color="#8082E5">• Ian Li</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="https://github.com/ianli/fortune-cookies-galore">https://github.com</a>)
+        <br><i><font color="#8082E5">• Ismael Olea</font></i> [<font color=#A268FF>Public domain</font>] (<a href="https://olea.org/proyectos/lemarios/">http://olea.org</a>)
+        <br><i><font color="#8082E5">• Neri</font></i> [<font color=#A268FF>Public domain</font>] (<a href="https://frequencylists.blogspot.com/2016/08/5000-spanish-sentences-sorted-from.html">https://blogger.com</a>)
+        <br><i><font color="#8082E5">• Solosequenosenada</font></i> [<font color=#A268FF>Public domain</font>] (<a href="https://www.solosequenosenada.com/gramatica/spanish/listado/lista_01_adjetivos.php">http://www.solosequenosenada.com</a>)
+        <br><i><font color="#8082E5">• Wikipedia, the free encyclopedia/font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<a href="https://www.wikipedia.org/">https://www.wikipedia.org</a>)
+        <br><br><font color="#53E3B3">Code</font>
         <br><i><font color="#FDFCDA">• Alexandros Schillings, Cyril Mottier, Jeff Gilfelt, Jon Adams, Kevin (kevinchai): </font><font color=#FFFDC4>Android SQLiteAssetHelper</font></i> [<font color=#D0F0B7>Apache License v2.0</font>] (<a href="https://github.com/jgilfelt/android-sqlite-asset-helper/">https://github.com/</a>)
         <br><i><font color="#FDFCDA">• Amar Jain: </font><font color=#FFFDC4>StickyScrollView</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="https://github.com/amarjain07/StickyScrollView/">https://github.com/</a>)
         <br><i><font color="#FDFCDA">• Encryptor Code: </font><font color=#FFFDC4>Pluralize</font></i> [<font color=#FF9BB4>MIT License</font>] (<a href="https://github.com/encryptorcode/pluralize/">https://github.com/</a>)
@@ -65,6 +66,7 @@
         <br><br>Guillermo Almaguer (Memoeslink)
         <br>Email: <a href="mailto:memocad@gmail.com">memocad@gmail.com</a>
         <br><br>By using "%1$s", you agree to this privacy policy. If you do not agree with this policy, please do not use our application. Your continued use of the application following the posting of changes to this policy will be deemed as your acceptance of such changes.
+        <br><br>For more information regarding this, please refer to our complete <a href="https://drive.google.com/file/d/1NFvPJOEIhUV-v8Tr9nuDC_seqhYz1b46/view?usp=sharing">Privacy Policy</a>.
         ]]>
     </string>
     <string name="adjectives">boring¶ affectionate¶ agile¶ pleasant¶ cheerful¶ kind¶ resentful¶ ambitious¶ friendly¶ angelic¶ fervent¶ listless¶ ardent¶ attentive¶ groggy¶ saucy¶ adventurous¶ sharp¶ crass¶ quarrelsome¶ bright¶ sneering¶ cantankerous¶ cautious¶ jealous¶ cynical¶ cowardly¶ coherent¶ sympathetic¶ conscientious¶ conservative¶ considerate¶ distraught¶ conventional¶ talkative¶ flirtatious¶ hearty¶ blunt¶ polite¶ big-headed¶ cruel¶ careful¶ curious¶ open-minded¶ laid-back¶ easy-going¶ moody¶ bad-tempered¶ short-tempered¶ narrow-minded¶ weak¶ dependent¶ dreary¶ depressed¶ dowdy¶ distrustful¶ inconsiderate¶ careless¶ idle¶ carefree¶ trustworthy¶ diligent¶ tactful¶ direct¶ discreet¶ argumentative¶ distant¶ absent-minded¶ funny¶ hesitant¶ sweet¶ polite¶ efficient¶ selfish¶ elegant¶ two-faced¶ emotional¶ enterprising¶ charming¶ energetic¶ peevish¶ conceited¶ nosy¶ eager¶ balanced¶ boisterous¶ fastidious¶ stoic¶ strict¶ stupid¶ flaky¶ picky¶ experienced¶ weird¶ outgoing¶ zealous¶ reliable¶ loyal¶ flabby¶ staid¶ cold¶ generous¶ gentle¶ amusing¶ grouchy¶ deft¶ beautiful¶ hysterical¶ slothful¶ honest¶ awful¶ reclusive¶ imaginative¶ moronic¶ impatient¶ impetuous¶ impulsive¶ independent¶ childish¶ naive¶ immature¶ restless¶ tactless¶ intelligent¶ interesting¶ intolerant¶ plucky¶ playful¶ shrewd¶ querulous¶ crazy¶ mature¶ churlish¶ sulky¶ spiteful¶ nasty¶ maternal¶ gloomy¶ meticulous¶ modest¶ caustic¶ nervous¶ obnoxious¶ proud¶ patient¶ peaceful¶ passionate¶ pensive¶ lazy¶ persevering¶ disruptive¶ annoying¶ sassy¶ powerful¶ positive¶ practical¶ conceited¶ snobby¶ provocative¶ cautious¶ punctual¶ fussy¶ reluctant¶ realistic¶ leery¶ reserved¶ responsible¶ ridiculous¶ discerning¶ confident¶ self-confident¶ sensible¶ sensitive¶ serene¶ serious¶ obliging¶ stern¶ friendly¶ sincere¶ sophisticated¶ drowsy¶ dull¶ dirty¶ superficial¶ mean¶ sullen¶ talented¶ stubborn¶ shy¶ silly¶ clumsy¶ hard-working¶ reassuring¶ quiet¶ naughty¶ sad¶ helpful¶ brave¶ bitchy¶ lively</string>
